--- a/src/App.css
+++ b/src/App.css
@@ -488,45 +488,51 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /** Contact **/
 
-.contact {
-  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-  padding: 60px 0 200px 0;
+.Contact{
+  background: linear-gradient(90.21deg, #5536aa - 5.91%, #4A2FBD 111.58%);
 }
-.contact img {
-  width: 92%;
+
+.Contact img{
+  width: 80%;
 }
-.contact h2 {
-	font-size: 45px;
-	font-weight: 700;
+
+.Contact h2{
+  font-size: 45px;
+  font-weight: 700;
   margin-bottom: 30px;
 }
-.contact form input, .contact form textarea {
+
+.Contact form input, .Contact form textarea{
   width: 100%;
   background: rgba(255, 255, 255, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 20px;
-  color: #fff;
+  color: #ffff;
   margin: 0 0 8px 0;
   padding: 18px 26px;
-  font-weight: 500;
+  font-weight: 18px;
   font-size: 18px;
   letter-spacing: 0.8px;
   transition: 0.3s ease-in-out;
 }
-.contact form input:focus, .contact form textarea:focus {
+
+.Contact form input:focus, .Contact form textarea:focus{
   background: rgba(255, 255, 255, 1);
   color: #121212;
 }
-.contact form input::placeholder, .contact form textarea::placeholder {
+
+.Contact form input::placeholder, .Contact form textarea::placeholder{
   font-size: 16px;
   font-weight: 400;
   color: #fff;
 }
-.contact form input:focus::placeholder, .contact form textarea:focus::placeholder {
+
+.Contact form input:focus::placeholder, .Contact form textarea:focus::placeholder{
   color: #121212;
   opacity: 0.8;
 }
-.contact form button {
+
+.Contact form button{
   font-weight: 700;
   color: #000;
   background-color: #fff;
@@ -537,14 +543,17 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   position: relative;
   transition: 0.3s ease-in-out;
 }
-.contact form button span {
+
+.Contact form button span{
   z-index: 1;
   position: relative;
 }
-.contact form button:hover {
+
+.Contact form button:hover{
   color: #fff;
 }
-.contact form button::before {
+
+.Contact form button::before{
   content: "";
   background: #121212;
   width: 0;
@@ -555,7 +564,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   z-index: 0;
   transition: 0.3s ease-in-out;
 }
-.contact form button:hover::before {
+
+.Contact form button:hover::before{
   width: 100%;
 }
-
