--- a/src/App.css
+++ b/src/App.css
@@ -568,3 +568,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .Contact form button:hover::before{
   width: 100%;
 }
+
+/*** Footer ***/
+
+.footer{
+  padding: 50px 0  50px 0;
+  background-position: center center;
+}
